test/corpus/block_trailing_semi.txt
==================================================
type_method body followed by `;` parses as `block_trailing_semi`
==================================================

type T {
    static fn m(): int {
        return 0;
    };
}

---

(module
  (type_decl
    name: (ident)
    body: (type_body
      (type_method
        modifiers: (modifiers)
        name: (ident)
        params: (fn_params)
        return_type: (type_ident
          name: (ident))
        body: (block
          (return_stmt
            (number
              (number_int))))
        (block_trailing_semi)))))

==================================================
fn_decl body followed by `;` parses as `block_trailing_semi`
==================================================

fn n(): int {
    return 1;
};

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    return_type: (type_ident
      name: (ident))
    body: (block
      (return_stmt
        (number
          (number_int))))
    (block_trailing_semi)))

==================================================
type_method body without `;` still parses without `block_trailing_semi`
==================================================

type T {
    static fn m(): int { return 0; }
}

---

(module
  (type_decl
    name: (ident)
    body: (type_body
      (type_method
        modifiers: (modifiers)
        name: (ident)
        params: (fn_params)
        return_type: (type_ident
          name: (ident))
        body: (block
          (return_stmt
            (number
              (number_int))))))))

==================================================
Native method (no body, just `;`) still parses as before
==================================================

type T {
    fn m();
}

---

(module
  (type_decl
    name: (ident)
    body: (type_body
      (type_method
        name: (ident)
        params: (fn_params)))))

==================================================
Multiple trailing `;` pile up into one `block_trailing_semi` with `extra_semi` children
==================================================

fn n() {
    var x = 0;
};;;

---

(module
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block
      (var_decl
        name: (ident)
        (initializer
          expr: (number
            (number_int)))))
    (block_trailing_semi
      (extra_semi)
      (extra_semi))))

==================================================
type_decl body followed by `;` parses as `block_trailing_semi`
==================================================

type T {
    name: String;
};

---

(module
  (type_decl
    name: (ident)
    body: (type_body
      (type_attr
        name: (ident)
        type: (attr_type
          (type_ident
            name: (ident)))))
    (block_trailing_semi)))

==================================================
enum_decl body followed by `;` parses as `block_trailing_semi`
==================================================

enum E {
    a, b
};

---

(module
  (enum_decl
    name: (ident)
    body: (enum_body
      (enum_field
        (ident))
      (enum_field
        (ident)))
    (block_trailing_semi)))

==================================================
type_decl with multiple trailing `;` collapse into one `block_trailing_semi`
==================================================

type T { };;;

---

(module
  (type_decl
    name: (ident)
    body: (type_body)
    (block_trailing_semi
      (extra_semi)
      (extra_semi))))

==================================================
enum_decl trailing `;` doesn't ERROR-recover the next decl
==================================================

enum E { a };
fn next() {}

---

(module
  (enum_decl
    name: (ident)
    body: (enum_body
      (enum_field
        (ident)))
    (block_trailing_semi))
  (fn_decl
    name: (ident)
    params: (fn_params)
    body: (block)))
